ofc second commit

--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -38,6 +38,7 @@
         android:layout_below="@id/TvBinauralBeats"
         android:layout_alignParentBottom="true"
         android:layout_alignParentStart="true"
+        android:layout_marginBottom="?attr/actionBarSize"
         android:layout_alignParentEnd="true"
         android:layout_marginTop="@dimen/_18sdp"/>
 </RelativeLayout>
