--- a/app/src/main/res/layout/activity_walkthrough.xml
+++ b/app/src/main/res/layout/activity_walkthrough.xml
@@ -15,87 +15,49 @@
         <androidx.viewpager.widget.ViewPager
             android:id="@+id/PagerWalk"
             android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_above="@+id/LlWalk"/>
+            android:layout_height="match_parent"
+            android:layout_alignParentTop="true"/>
 
-        <LinearLayout
-            android:id="@+id/LlWalk"
+        <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_above="@+id/RlAdViewMain"
-            android:orientation="vertical">
+            android:layout_alignParentBottom="true"
+            android:layout_marginBottom="@dimen/_20sdp">
 
-            <TextView
-                android:id="@+id/TvWalkTitle"
+            <com.google.android.material.tabs.TabLayout
+                android:id="@+id/TabWalk"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_marginLeft="@dimen/_10sdp"
-                android:layout_marginRight="@dimen/_10sdp"
+                android:layout_marginTop="@dimen/_10sdp"
                 android:layout_marginBottom="@dimen/_8sdp"
+                android:layout_alignParentEnd="true"
+                android:layout_alignParentTop="true"
+                android:layout_alignParentStart="true"
+                android:background="@android:color/transparent"
+                app:tabBackground="@drawable/ic_tab_selector"
+                app:tabGravity="center"
+                app:tabIndicatorHeight="0dp" />
+
+            <TextView
+                android:id="@+id/TvWalkContinue"
+                android:layout_width="@dimen/_80sdp"
+                android:layout_height="@dimen/_40sdp"
+                android:layout_alignParentTop="true"
+                android:layout_alignParentEnd="true"
+                android:layout_gravity="center"
+                android:layout_marginTop="@dimen/_10sdp"
+                android:layout_marginBottom="@dimen/_8sdp"
+                android:layout_marginLeft="@dimen/_20sdp"
+                android:layout_marginRight="@dimen/_20sdp"
+                android:background="@drawable/ic_bg"
                 android:fontFamily="@font/main_semibold"
                 android:gravity="center"
-                android:maxLines="5"
-                android:singleLine="false"
-                android:text=""
+                android:text="NEXT"
+                android:textAllCaps="false"
                 android:textColor="@color/white"
-                android:textSize="@dimen/_15sdp" />
+                android:textSize="@dimen/_12sdp" />
 
-            <TextView
-                android:id="@+id/TvWalkSubTitle"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_marginLeft="@dimen/_10sdp"
-                android:layout_marginRight="@dimen/_10sdp"
-                android:layout_marginBottom="@dimen/_8sdp"
-                android:fontFamily="@font/main_medium"
-                android:gravity="center"
-                android:lineSpacingExtra="@dimen/_1sdp"
-                android:maxLines="5"
-                android:text=""
-                android:textColor="@color/new_gray"
-                android:textSize="@dimen/_14sdp" />
-
-            <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-
-                <com.google.android.material.tabs.TabLayout
-                    android:id="@+id/TabWalk"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/_10sdp"
-                    android:layout_marginBottom="@dimen/_8sdp"
-                    android:layout_alignParentEnd="true"
-                    android:layout_alignParentTop="true"
-                    android:layout_alignParentStart="true"
-                    android:background="@android:color/transparent"
-                    app:tabBackground="@drawable/ic_tab_selector"
-                    app:tabGravity="center"
-                    app:tabIndicatorHeight="0dp" />
-
-                <TextView
-                    android:id="@+id/TvWalkContinue"
-                    android:layout_width="@dimen/_80sdp"
-                    android:layout_height="@dimen/_40sdp"
-                    android:layout_alignParentTop="true"
-                    android:layout_alignParentEnd="true"
-                    android:layout_gravity="center"
-                    android:layout_marginTop="@dimen/_10sdp"
-                    android:layout_marginBottom="@dimen/_8sdp"
-                    android:layout_marginLeft="@dimen/_20sdp"
-                    android:layout_marginRight="@dimen/_20sdp"
-                    android:background="@drawable/ic_bg"
-                    android:fontFamily="@font/main_semibold"
-                    android:gravity="center"
-                    android:text="NEXT"
-                    android:textAllCaps="false"
-                    android:textColor="@color/white"
-                    android:textSize="@dimen/_12sdp" />
-
-            </RelativeLayout>
-        </LinearLayout>
+        </RelativeLayout>
         <RelativeLayout
             android:id="@+id/RlAdViewMain"
             android:layout_width="match_parent"
