--- a/app/src/main/res/layout/fragment_dashboard.xml
+++ b/app/src/main/res/layout/fragment_dashboard.xml
@@ -7,9 +7,22 @@
     tools:context=".ui.Fragment.DashboardFragment">
 
     <TextView
+        android:id="@+id/TvWelcomeTo"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="@dimen/_8sdp"
+        android:layout_marginTop="@dimen/_12sdp"
+        android:layout_marginRight="@dimen/_8sdp"
+        android:text="@string/welcome_to"
+        android:textColor="#fff"
+        android:textSize="@dimen/_14sdp"
+        android:textStyle="bold" />
+
+    <TextView
         android:id="@+id/TvRelaxingSounds"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_below="@id/TvWelcomeTo"
         android:layout_marginLeft="@dimen/_8sdp"
         android:layout_marginTop="1dp"
         android:layout_marginRight="@dimen/_8sdp"
@@ -23,6 +36,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_below="@id/TvRelaxingSounds"
+        android:layout_marginBottom="?attr/actionBarSize"
         android:layout_alignParentStart="true"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
