--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/mobile_navigation"
-    app:startDestination="@+id/NavTraining">
+    app:startDestination="@+id/NavHome">
 
     <fragment
         android:id="@+id/NavHome"
@@ -17,11 +17,11 @@
         android:label="@string/str_dashboard"
         tools:layout="@layout/fragment_dashboard" />
 
-    <fragment
-        android:id="@+id/NavInformation"
-        android:name="com.sound.meditionsoundapp.ui.Fragment.InformationFragment"
-        android:label="@string/str_infomation"
-        tools:layout="@layout/fragment_information" />
+<!--    <fragment-->
+<!--        android:id="@+id/NavInformation"-->
+<!--        android:name="com.sound.meditionsoundapp.ui.Fragment.InformationFragment"-->
+<!--        android:label="@string/str_infomation"-->
+<!--        tools:layout="@layout/fragment_information" />-->
 
     <fragment
         android:id="@+id/NavNotification"
