ofc fifth commit

--- a/app/src/main/res/layout/activity_exercise_timer.xml
+++ b/app/src/main/res/layout/activity_exercise_timer.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/colorBg"
+    android:background="@drawable/ic_background"
     tools:context=".ui.Activity.ExerciseTimerActivity">
 
     <RelativeLayout
@@ -32,7 +32,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:layout_margin="@dimen/_5sdp"
+            android:layout_margin="@dimen/_12sdp"
             app:cardCornerRadius="@dimen/_12sdp">
 
             <TimePicker
@@ -40,9 +40,9 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/main_semibold"
-                android:headerBackground="@color/purple_500"
+                android:headerBackground="@color/purple_700"
                 android:numbersBackgroundColor="#E5E5E5"
-                android:numbersSelectorColor="@color/purple_500" />
+                android:numbersSelectorColor="@color/purple_700" />
         </androidx.cardview.widget.CardView>
 
         <LinearLayout
@@ -70,11 +70,13 @@
 
                     <TextView
                         android:id="@+id/TvExerciseSetReminders"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
+                        android:layout_width="@dimen/_150sdp"
+                        android:layout_height="@dimen/_30sdp"
                         android:fontFamily="@font/main_semibold"
                         android:paddingStart="@dimen/_18sdp"
                         android:paddingTop="@dimen/_6sdp"
+                        android:gravity="center"
+                        android:background="@drawable/ic_background_color"
                         android:paddingEnd="@dimen/_18sdp"
                         android:paddingBottom="@dimen/_6sdp"
                         android:text="@string/str_reminder"
