--- a/app/src/main/res/layout/item_sound.xml
+++ b/app/src/main/res/layout/item_sound.xml
@@ -41,8 +41,8 @@
                 android:layout_height="wrap_content"
                 android:padding="@dimen/_10sdp"
                 android:text="@string/binaural_beats"
-                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                 android:textColor="@color/white"
+                android:fontFamily="@font/main_semibold"
                 android:textSize="@dimen/_14sdp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
