--- a/app/src/main/res/layout/activity_sound_player.xml
+++ b/app/src/main/res/layout/activity_sound_player.xml
@@ -24,37 +24,49 @@
         android:layout_marginTop="@dimen/_10sdp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/RlActionbarSound">
+        app:layout_constraintTop_toBottomOf="@+id/RlActionbarSound"
+        app:layout_constraintVertical_bias="0.0">
 
         <ImageView
             android:id="@+id/IvItemImg"
-            android:layout_width="0dp"
-            android:layout_height="@dimen/_120sdp"
+            android:layout_width="@dimen/_150sdp"
+            android:layout_height="@dimen/_150sdp"
             android:layout_alignParentStart="true"
-            android:layout_alignParentEnd="true"/>
+            android:layout_marginStart="@dimen/_20sdp" />
 
-        <ImageView
-            android:id="@+id/IvPlaySound"
-            android:layout_width="@dimen/_50sdp"
-            android:layout_height="@dimen/_50sdp"
-            android:layout_below="@+id/IvItemImg"
-            android:layout_alignParentStart="true"
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_alignTop="@id/IvItemImg"
+            android:layout_alignBottom="@id/IvItemImg"
             android:layout_alignParentEnd="true"
-            android:layout_marginTop="@dimen/_10sdp"
-            android:src="@drawable/play" />
+            android:gravity="center"
+            android:layout_marginStart="@dimen/_20sdp"
+            android:layout_toEndOf="@+id/IvItemImg">
+
+            <ImageView
+                android:id="@+id/IvPlaySound"
+                android:layout_width="@dimen/_50sdp"
+                android:layout_height="@dimen/_50sdp"
+                android:layout_alignTop="@id/IvItemImg"
+                android:layout_alignBottom="@id/IvItemImg"
+                android:layout_toEndOf="@+id/IvItemImg"
+                android:src="@drawable/ic_play" />
+        </LinearLayout>
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/RvSound"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/_10sdp"
-            android:layout_below="@+id/IvPlaySound"
+            android:layout_below="@+id/IvItemImg"
             android:layout_alignParentStart="true"
             android:layout_alignParentEnd="true"
-            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
             android:layout_alignParentBottom="true"
-            tools:listitem="@layout/item_sound"/>
+            android:layout_marginTop="@dimen/_20sdp"
+            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+            tools:listitem="@layout/item_sound" />
 
     </RelativeLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
