--- a/app/src/main/res/layout/layout_header.xml
+++ b/app/src/main/res/layout/layout_header.xml
@@ -2,19 +2,18 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="?attr/actionBarSize">
+    android:layout_height="@dimen/_60sdp">
 
     <ImageView
         android:id="@+id/IvBack"
-        android:layout_width="@dimen/_20sdp"
-        android:layout_height="@dimen/_20sdp"
+        android:layout_width="@dimen/_35sdp"
+        android:layout_height="@dimen/_35sdp"
         android:layout_gravity="center_vertical"
         android:layout_marginStart="@dimen/_10sdp"
         android:src="@drawable/ic_back"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:tint="@color/white" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/ClToolRight"
@@ -26,11 +25,14 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <ImageView
-            android:id="@+id/IvDelete"
-            android:layout_width="@dimen/_30sdp"
-            android:layout_height="@dimen/_30sdp"
+            android:id="@+id/IvSetting"
+            android:layout_width="@dimen/_40sdp"
+            android:layout_height="match_parent"
             android:layout_gravity="center_vertical"
             android:padding="@dimen/_2sdp"
+            android:layout_marginEnd="@dimen/_10sdp"
+            android:layout_marginTop="@dimen/_2sdp"
+            android:src="@drawable/ic_setting"
             android:visibility="invisible"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -43,7 +45,7 @@
         android:layout_height="match_parent"
         android:layout_gravity="center_vertical"
         android:layout_marginStart="@dimen/_8ssp"
-        android:fontFamily="@font/main_semibold"
+        android:fontFamily="@font/main_bold"
         android:gravity="center_vertical"
         android:includeFontPadding="false"
         android:paddingStart="10dp"
@@ -51,7 +53,7 @@
         android:textSize="@dimen/_14sdp"
         android:text="@string/binaural_beats"
         android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-        android:textColor="@color/white"
+        android:textColor="@color/purple_500"
         app:layout_constraintEnd_toStartOf="@+id/ClToolRight"
         app:layout_constraintStart_toEndOf="@id/IvBack" />
 </androidx.constraintlayout.widget.ConstraintLayout>
