--- a/app/src/main/res/menu/nav_action_home.xml
+++ b/app/src/main/res/menu/nav_action_home.xml
@@ -11,13 +11,13 @@
             android:id="@+id/NavDashboard"
             android:icon="@drawable/relexicon"
             android:title="@string/str_dashboard" />
-<!--        <item-->
-<!--            android:id="@+id/NavInformation"-->
-<!--            android:icon="@drawable/info"-->
-<!--            android:title="@string/str_infomation" />-->
         <item
-            android:id="@+id/NavNotification"
-            android:icon="@drawable/setting"
-            android:title="@string/str_notifications" />
+            android:id="@+id/NavInformation"
+            android:icon="@drawable/info"
+            android:title="@string/str_infomation" />
+<!--        <item-->
+<!--            android:id="@+id/NavNotification"-->
+<!--            android:icon="@drawable/setting"-->
+<!--            android:title="@string/str_notifications" />-->
     </group>
 </menu>
