--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -17,16 +17,16 @@
         android:label="@string/str_dashboard"
         tools:layout="@layout/fragment_dashboard" />
 
-<!--    <fragment-->
-<!--        android:id="@+id/NavInformation"-->
-<!--        android:name="com.sound.meditionsoundapp.ui.Fragment.InformationFragment"-->
-<!--        android:label="@string/str_infomation"-->
-<!--        tools:layout="@layout/fragment_information" />-->
-
     <fragment
-        android:id="@+id/NavNotification"
-        android:name="com.sound.meditionsoundapp.ui.Fragment.SettingFragment"
-        android:label="@string/str_notifications"
-        tools:layout="@layout/fragment_setting" />
+        android:id="@+id/NavInformation"
+        android:name="com.sound.meditionsoundapp.ui.Fragment.InformationFragment"
+        android:label="@string/str_infomation"
+        tools:layout="@layout/fragment_information" />
+
+<!--    <fragment-->
+<!--        android:id="@+id/NavNotification"-->
+<!--        android:name="com.sound.meditionsoundapp.ui.Fragment.SettingFragment"-->
+<!--        android:label="@string/str_notifications"-->
+<!--        tools:layout="@layout/fragment_setting" />-->
 
 </navigation>
