--- a/app/src/main/res/drawable/ic_selected_dot.xml
+++ b/app/src/main/res/drawable/ic_selected_dot.xml
@@ -6,7 +6,7 @@
             android:shape="ring"
             android:thickness="6dp"
             android:useLevel="false">
-            <solid android:color="@color/black"/>
+            <solid android:color="#FF008A"/>
         </shape>
     </item>
 </layer-list>
