--- a/app/src/main/res/layout/fragment_information.xml
+++ b/app/src/main/res/layout/fragment_information.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/ic_background"
     tools:context=".ui.Fragment.InformationFragment">
 
     <ScrollView
@@ -31,9 +32,9 @@
                     android:id="@+id/TitleOne"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="10dp"
-                    android:layout_marginTop="15dp"
-                    android:layout_marginRight="10dp"
+                    android:layout_marginLeft="@dimen/_8sdp"
+                    android:layout_marginTop="@dimen/_12sdp"
+                    android:layout_marginRight="@dimen/_8sdp"
                     android:fontFamily="@font/main_bold"
                     android:text="What is Binaural Beats?"
                     android:textColor="@color/purple_500"
@@ -45,10 +46,11 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="10dp"
-                android:layout_marginTop="5dp"
-                android:layout_marginRight="10dp"
+                android:layout_marginStart="@dimen/_8sdp"
+                android:layout_marginTop="@dimen/_5sdp"
+                android:layout_marginEnd="@dimen/_8sdp"
                 android:fontFamily="@font/main_medium"
+                android:letterSpacing="0.03"
                 android:text="When you hear two tones, one in each ear, that are slightly different in frequency, your brain processes a beat at the difference of the frequencies. This is called a binaural beat.  Let’s say you’re listening to a sound in your left ear that’s at a frequency of 132 Hertz (Hz). And in your right ear, you’re listening to a sound that’s at a frequency of 121 Hz. Your brain, however, gradually falls into synchrony with the difference — or 11 Hz. Instead of hearing two different tones, you instead hear a tone at 11 Hz (in addition to the two tones given to each ear).  Binaural beats are considered auditory illusions. For a binaural beat to work, the two tones have to have frequencies less than 1000 Hz, and the difference between the two tones can’t be more than 30 Hz. The tones also have to be listened to separately, one through each ear. Binaural beats have been explored in music and are sometimes used to help tune instruments, such as pianos and organs. More recently, they have been connected to potential health benefits."
                 android:textColor="@color/white"
                 android:textSize="@dimen/_12sdp" />
@@ -56,10 +58,11 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="10dp"
-                android:layout_marginTop="5dp"
-                android:layout_marginRight="10dp"
+                android:layout_marginLeft="@dimen/_8sdp"
+                android:layout_marginTop="@dimen/_5sdp"
+                android:layout_marginRight="@dimen/_8sdp"
                 android:fontFamily="@font/main_medium"
+                android:letterSpacing="0.03"
                 android:text="Binaural beats are claimed to induce the same mental state associated with a meditation practice, but much more quickly. In effect, binaural beats are said to:  reduce anxiety increase focus and concentration lower stress increase relaxation foster positive moods promote creativity help manage pain Meditation is the practice of calming the mind and tuning down the number of random thoughts that pass through it. A regular meditation practice has been shown to reduce stress and anxiety, slow down the rate of brain aging and memory loss, promote emotional health, and lengthen attention span. Practicing meditation regularly can be quite difficult, so people have looked to technology for help."
                 android:textColor="@color/white"
                 android:textSize="@dimen/_12sdp" />
@@ -67,10 +70,11 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="10dp"
-                android:layout_marginTop="5dp"
-                android:layout_marginRight="10dp"
+                android:layout_marginLeft="@dimen/_8sdp"
+                android:layout_marginTop="@dimen/_5sdp"
+                android:layout_marginRight="@dimen/_8sdp"
                 android:fontFamily="@font/main_medium"
+                android:letterSpacing="0.03"
                 android:text="Binaural beats between 1 and 30 Hz are alleged to create the same brainwave pattern that one would experience during meditation. When you listen to a sound with a certain frequency, your brain waves will synchronize with that frequency. The theory is that binaural beats can help create the frequency needed for your brain to create the same waves commonly experienced during a meditation practice. The use of binaural beats in this way is sometimes called brainwave entrainment technology."
                 android:textColor="@color/white"
                 android:textSize="@dimen/_12sdp" />
@@ -92,9 +96,9 @@
                     android:id="@+id/TitleTwo"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="10dp"
-                    android:layout_marginTop="15dp"
-                    android:layout_marginRight="10dp"
+                    android:layout_marginLeft="@dimen/_8sdp"
+                    android:layout_marginTop="@dimen/_12sdp"
+                    android:layout_marginRight="@dimen/_8sdp"
                     android:layout_toEndOf="@id/ViewSlidePenalSec"
                     android:fontFamily="@font/main_bold"
                     android:text="Why are Nature Sounds So Relaxing?"
@@ -105,10 +109,12 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="10dp"
-                android:layout_marginTop="5dp"
-                android:layout_marginRight="10dp"
+                android:layout_marginLeft="@dimen/_8sdp"
+                android:layout_marginTop="@dimen/_5sdp"
+                android:layout_marginRight="@dimen/_8sdp"
+                android:layout_marginBottom="@dimen/_5sdp"
                 android:fontFamily="@font/main_medium"
+                android:letterSpacing="0.03"
                 android:text="If you go into this app on your phone, you can find  nature sound apps that are supposed to help you sleep. Natural sounds relax you because they are constant noises of a pleasant pitch. Your brain interprets them as non-threatening noises, which helps reduce your fight-or-flight response. This lowers your stress level and helps you become more relaxed for sleep. Nature sounds and other background noises also help mask sounds that might keep you awake, like traffic or someone moving around in the apartment above you."
                 android:textColor="@color/white"
                 android:textSize="@dimen/_12sdp" />
