--- a/app/src/main/res/layout/activity_sound_player.xml
+++ b/app/src/main/res/layout/activity_sound_player.xml
@@ -31,28 +31,26 @@
 
         <ImageView
             android:id="@+id/IvItemImg"
-            android:layout_width="@dimen/_150sdp"
-            android:layout_height="@dimen/_150sdp"
+            android:layout_width="wrap_content"
+            android:layout_height="@dimen/_165sdp"
             android:layout_alignParentStart="true"
-            android:layout_marginStart="@dimen/_20sdp" />
+            android:layout_alignParentEnd="true"
+            android:src="@drawable/ic_ocean"
+            android:layout_margin="@dimen/_20sdp" />
 
         <LinearLayout
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_alignTop="@id/IvItemImg"
-            android:layout_alignBottom="@id/IvItemImg"
-            android:layout_alignParentEnd="true"
-            android:gravity="center"
-            android:layout_marginStart="@dimen/_20sdp"
-            android:layout_toEndOf="@+id/IvItemImg">
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignStart="@+id/IvItemImg"
+            android:layout_alignEnd="@+id/IvItemImg"
+            android:layout_alignTop="@+id/IvItemImg"
+            android:layout_alignBottom="@+id/IvItemImg"
+            android:gravity="center">
 
             <ImageView
                 android:id="@+id/IvPlaySound"
                 android:layout_width="@dimen/_50sdp"
                 android:layout_height="@dimen/_50sdp"
-                android:layout_alignTop="@id/IvItemImg"
-                android:layout_alignBottom="@id/IvItemImg"
-                android:layout_toEndOf="@+id/IvItemImg"
                 android:src="@drawable/ic_play" />
         </LinearLayout>
 
