--- a/app/src/main/res/layout/activity_walkthrough.xml
+++ b/app/src/main/res/layout/activity_walkthrough.xml
@@ -15,10 +15,12 @@
         <androidx.viewpager.widget.ViewPager
             android:id="@+id/PagerWalk"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_alignParentTop="true"/>
+            android:layout_height="0dp"
+            android:layout_above="@+id/RlTexts"
+            android:layout_alignParentTop="true" />
 
         <RelativeLayout
+            android:id="@+id/RlTexts"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
@@ -56,7 +58,7 @@
                 android:text="NEXT"
                 android:textAllCaps="false"
                 android:textColor="@color/white"
-                android:textSize="@dimen/_12sdp" />
+                android:textSize="@dimen/_16sdp" />
 
         </RelativeLayout>
         <RelativeLayout
