--- a/app/src/main/res/layout/item_pager_list.xml
+++ b/app/src/main/res/layout/item_pager_list.xml
@@ -7,10 +7,12 @@
     <ImageView
         android:id="@+id/IvSlider"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
+        android:layout_height="wrap_content"
         android:src="@drawable/ic_bg_1"
+        android:paddingStart="@dimen/_30sdp"
+        android:paddingEnd="@dimen/_30sdp"
+        android:paddingTop="@dimen/_30sdp"
         app:layout_constraintBottom_toTopOf="@+id/LlWalk"
-        app:layout_constraintDimensionRatio="2:2"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -19,7 +21,7 @@
         android:id="@+id/LlWalk"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="@dimen/_80sdp"
+        android:layout_marginBottom="@dimen/_50sdp"
         app:layout_constraintBottom_toBottomOf="parent"
         android:orientation="vertical">
 
@@ -36,8 +38,8 @@
             android:maxLines="5"
             android:singleLine="false"
             android:text=""
-            android:textColor="@color/black"
-            android:textSize="@dimen/_15sdp" />
+            android:textColor="@color/purple_500"
+            android:textSize="@dimen/_20sdp" />
 
         <TextView
             android:id="@+id/TvWalkSubTitle"
@@ -52,7 +54,7 @@
             android:lineSpacingExtra="@dimen/_1sdp"
             android:maxLines="5"
             android:text=""
-            android:textColor="@color/black"
+            android:textColor="@color/white"
             android:textSize="@dimen/_14sdp" />
 
     </LinearLayout>
